fixed the user-prompt not showing up

--- a/style.css
+++ b/style.css
@@ -1,6 +1,6 @@
 * {
   visibility: inherit;
-  display: grid;  
+  display: grid;
   text-align: center;
   grid-template-columns: 1fr;
   grid-template-rows: 1fr;
@@ -11,23 +11,23 @@ title {
   visibility: hidden;
 }
 body {
-  width:100%;
-  height:100%;
-  position:fixed;
-  top:0;
-  left:0;
-  border-style:none;
+  width: 100%;
+  height: 100%;
+  position: fixed;
+  top: 0;
+  left: 0;
+  border-style: none;
   display: grid;
   background-color: rgb(11, 11, 48);
   grid-template-columns: 10vw 80vw 5vw;
   grid-template-rows: 10vh 80vh 10vh;
-  visibility: hidden;
+  visibility: ;
 }
 body > div {
   display: grid;
   grid-template-columns: repeat(5, 1fr);
   grid-template-rows: repeat(20, 1fr);
-  visibility: inherit;
+  visibility: ;
 }
 button {
   background-color: chartreuse;
@@ -40,8 +40,16 @@ button {
   grid-row: 1;
   grid-template-rows: repeat(3, 1fr);
 }
+#user-prompt {
+  grid-column: 1;
+  grid-row: 1;
+  padding: 0.5em;
+  background-color: chartreuse;
+  border: rgb(213, 255, 171) solid 1px;
+  border-radius: 10px;
+}
 #title {
-  grid-column: 1 / span 5;
+  grid-column: 2 / span 5;
   grid-row: 1;
   font-size: 1.25em;
   padding: 00.5em;
@@ -139,10 +147,6 @@ button {
   grid-row: 3;
   grid-template-rows: repeat(5, 1fr);
 }
-#user-prompt {
-  grid-column: 2 / span 3;
-  grid-row: 1;
-}
 #user-input {
   grid-column: 2 / span 2;
   grid-row: 2;
@@ -161,9 +165,7 @@ button {
 #current {
   grid-column: 3;
   grid-row: 2 / span 2;
-  
 }
 .prize-level {
   background-color: chartreuse;
-  float: right;
 }
